infra/kube/accounts.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: faikingyip/fastapi-microservices-demo-accounts:latest
