infra/kube/items.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: faikingyip/fastapi-microservices-demo-items:latest
