infra/kube/transactions.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactions-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactions
  template:
    metadata:
      labels:
        app: transactions
    spec:
      containers:
        - name: transactions
          image: faikingyip/fastapi-microservices-demo-transactions:latest
