infra/kube/accounts.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts-srv
spec:
  selector:
    app: accounts
  ports:
    - name: accounts
      protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
