infra/kube/auth-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
