infra/kube/items.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: items-srv
spec:
  selector:
    app: items
  ports:
    - name: items
      protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
