infra/kube/transactions.srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: transactions-srv
spec:
  selector:
    app: transactions
  ports:
    - name: transactions
      protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
